--- a/pages/bank.html
+++ b/pages/bank.html
@@ -15,7 +15,7 @@
         <li><a href="">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="kurs.html">Kurs*</a></li>
-        <li><a href="">TV</a></li>
+        <li><a href="om_oss.html">Om oss</a></li>
       </ul>
     </nav>
     <div id="linje"></div>
@@ -23,7 +23,7 @@
     <h4>Hva trenger du hjelp til?</h4>
 
     <div class="queries">
-      <li><a href="">Jeg må logge meg inn på banken min</a></li>
+      <li><a href="loggeinn.html">Logge inn på nettbanken</a></li>
       <li><a href="">Jeg vil ta ut penger fra banken</a></li>
       <li>
         <a href="pin_kode.html"
