--- a/pages/pin_kode.html
+++ b/pages/pin_kode.html
@@ -15,7 +15,7 @@
         <li><a href="">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="kurs.html">Kurs*</a></li>
-        <li><a href="">TV</a></li>
+        <li><a href="om_oss.html">Om oss</a></li>
       </ul>
     </nav>
     <div id="linje"></div>
