--- a/index.html
+++ b/index.html
@@ -9,54 +9,54 @@
   </head>
   <body>
     <nav>
+      
       <ul>
         <li><a href="index.html">Hjem*</a></li>
         <li><a href="pages/bank.html">Bank*</a></li>
         <li><a href="">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="pages/kurs.html">Kurs*</a></li>
-        <li><a href="">TV</a></li>
+        <li><a href="pages/om_oss.html">Om oss</a></li>
       </ul>
     </nav>
     <div id="linje"></div>
     <h1>Velkommen til nettkurs</h1>
     <h2>Hva kan vi hjelpe deg med?</h2>
-    <div id="top">
-      <h5>Mest populære</h5>
-      <div id="boxes">
-        <a href="pages/vipps.html"><img src="data/vipps.png" alt="" /></a>
-        <a href=""><img src="data/facebook.jpg" alt="" /></a>
-        <a href=""><img src="data/netflix.avif" alt="" /></a>
-      </div>
-    </div>
     <p id="scroll">Scroll ned for mer informasjon</p>
     <div id="pil">
-      <a href="#hvem"
+      <a href="#hopp"
         ><img src="data/pilned.svg" alt="an arrow pointing down"
       /></a>
     </div>
-    <h3 class="banner" id="hvem">Hvem er vi?</h3>
-    <p class="textbox">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
-      voluptates obcaecati rem, modi vitae esse odit ad nesciunt illum quo id
-      excepturi molestiae quasi natus, incidunt laborum numquam eius maiores!
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis
-      quas laudantium rerum saepe mollitia amet doloribus, animi minus sequi
-      iste esse molestias sit consequuntur vitae beatae debitis! Mollitia,
-      quisquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Nesciunt saepe nostrum vel! Nisi architecto cupiditate omnis in obcaecati,
-      quae impedit suscipit tempore dignissimos numquam enim debitis deleniti
-      voluptatibus similique! Sed! Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Velit fugit facere rem quo ipsa consequuntur porro
-      maiores quis dolores repellat quibusdam mollitia debitis, laboriosam
-      dolorum obcaecati hic possimus sequi soluta. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Facilis aspernatur doloribus, obcaecati
-      vitae neque dolorem! Mollitia ut aspernatur in nobis saepe distinctio
-      aperiam? Numquam odio provident vel sint beatae nam. Lorem ipsum, dolor
-      sit amet consectetur adipisicing elit. Ipsam optio earum est totam soluta
-      nisi asperiores consequatur vel ad id fugit, dignissimos eos
-      exercitationem minima at et quam pariatur excepturi.
-    </p>
+    <h3 class="banner" id="hopp">Kurs i nærheten av deg</h3>
+    <table>
+      <tr>
+        <th>Hvor</th>
+        <th>Om hva</th>
+        <th>Når</th>
+      </tr>
+      <tr>
+        <td>GJøvik rådhus</td>
+        <td>Kurs om banktjenester</td>
+        <td>Hver tirsdag fra kl 13.30 - 15.00</td>
+      </tr>
+      <tr>
+        <td>Gjøvik rådhus</td>
+        <td>Kurs om apper og nedlasting av apper</td>
+        <td>Hver onsdag kl 12.00 - 13.30</td>
+      </tr>
+      <tr>
+        <td>Bibloteket</td>
+        <td>Kurs om internett sikkerhet</td>
+        <td>16.12 klokken 10.00-12.00</td>
+      </tr>
+    </table>
+    <iframe
+      title="Google map of NTNU Gjøvik"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1947.0948114104137!2d10.672821816505415!3d60.78974380011602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4641db7a7c610437%3A0x5783e79eaec830ba!2sNTNU%20Institutt%20for%20design%2C%20Gj%C3%B8vik!5e0!3m2!1sen!2sno!4v1637502797850!5m2!1sen!2sno"
+    ></iframe>
+    
+   
     <footer></footer>
   </body>
 </html>
