--- a/pages/app.html
+++ b/pages/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kurs</title>
+    <title>Appjelp</title>
     <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
@@ -19,7 +19,15 @@
       </ul>
     </nav>
     <div id="linje"></div>
+    <h3 class="banner_center">App</h3>
+    <h4>Hvilken app vil du se på?</h4>
 
+    <div id="bildevalg">
+      <a href="vipps.html"><img src="../data/vipps.png" alt="" /></a>
+      <a href=""><img src="../data/spotify.png" alt="" /></a>
+      <a href=""><img src="../data/digipost.jpg" alt="" /></a>
+      <a href=""><img src="../data/easypark.jpg" alt="" /></a>
+    </div>
     <footer></footer>
   </body>
 </html>
