--- a/pages/bank.html
+++ b/pages/bank.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="../index.html">Hjem*</a></li>
         <li><a href="bank.html">Bank*</a></li>
-        <li><a href="">App</a></li>
+        <li><a href="app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="kurs.html">Kurs*</a></li>
         <li><a href="om_oss.html">Om oss</a></li>
