--- a/pages/loggeinn.html
+++ b/pages/loggeinn.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> velg bank</title>
-    <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>velg bank</title>
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body>
     <nav>
-        <ul>
-          <li><a href="../index.html">Hjem*</a></li>
-          <li><a href="bank.html">Bank*</a></li>
-          <li><a href="">App</a></li>
-          <li><a href="">Internett</a></li>
-          <li><a href="kurs.html">Kurs*</a></li>
-          <li><a href="om_oss.html">Om oss</a></li>
-        </ul>
-      </nav>
-      <div id="linje"></div>
+      <ul>
+        <li><a href="../index.html">Hjem*</a></li>
+        <li><a href="bank.html">Bank*</a></li>
+        <li><a href="app.html">App</a></li>
+        <li><a href="">Internett</a></li>
+        <li><a href="kurs.html">Kurs*</a></li>
+        <li><a href="om_oss.html">Om oss</a></li>
+      </ul>
+    </nav>
+    <div id="linje"></div>
 
-      <div id="velgbank">
-        <a href="login/loginsparebank.html"><img src="../data/velg_sparebank.png" alt=""></a>
-        <a href="login/logindnb.html"><img src="../data/velg_dnb.png" alt=""></a>
-        <a href="login/loginnordea.html"><img src="../data/velg_nordea.png" alt=""></a>
-        <a href="login/logindansk.html"><img src="../data/velg_danskebank.png" alt=""></a>
-      </div>
-</body>
+    <div id="bildevalg">
+      <a href="login/loginsparebank.html"
+        ><img src="../data/velg_sparebank.png" alt=""
+      /></a>
+      <a href="login/logindnb.html"
+        ><img src="../data/velg_dnb.png" alt=""
+      /></a>
+      <a href="login/loginnordea.html"
+        ><img src="../data/velg_nordea.png" alt=""
+      /></a>
+      <a href="login/logindansk.html"
+        ><img src="../data/velg_danskebank.png" alt=""
+      /></a>
+    </div>
+  </body>
 </html>
