--- a/pages/om_oss.html
+++ b/pages/om_oss.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>om_oss</title>
-    <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body>
     <nav>
-        <ul>
-            <li><a href="../index.html">Hjem*</a></li>
+      <ul>
+        <li><a href="../index.html">Hjem*</a></li>
         <li><a href="bank.html">Bank*</a></li>
-        <li><a href="">App</a></li>
+        <li><a href="app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="kurs.html">Kurs*</a></li>
         <li><a href="om_oss.html">Om oss</a></li>
-        </ul>
+      </ul>
     </nav>
     <div id="linje"></div>
     <h3 class="banner" id="hvem">Hvem er vi?</h3>
@@ -41,5 +41,5 @@
       nisi asperiores consequatur vel ad id fugit, dignissimos eos
       exercitationem minima at et quam pariatur excepturi.
     </p>
-</body>
+  </body>
 </html>
