--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   </head>
   <body>
     <nav>
-      
       <ul>
         <li><a href="index.html">Hjem*</a></li>
         <li><a href="pages/bank.html">Bank*</a></li>
-        <li><a href="">App</a></li>
+        <li><a href="pages/app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="pages/kurs.html">Kurs*</a></li>
         <li><a href="pages/om_oss.html">Om oss</a></li>
@@ -55,8 +54,7 @@
       title="Google map of NTNU Gjøvik"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1947.0948114104137!2d10.672821816505415!3d60.78974380011602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4641db7a7c610437%3A0x5783e79eaec830ba!2sNTNU%20Institutt%20for%20design%2C%20Gj%C3%B8vik!5e0!3m2!1sen!2sno!4v1637502797850!5m2!1sen!2sno"
     ></iframe>
-    
-   
+
     <footer></footer>
   </body>
 </html>
