--- a/pages/login/logindnb.html
+++ b/pages/login/logindnb.html
@@ -1,24 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dnb login</title>
-    <link rel="stylesheet" href="../../styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../../styles/style.css" />
+  </head>
+  <body>
     <nav>
-        <ul>
-            <li><a href="../../index.html">Hjem*</a></li>
+      <ul>
+        <li><a href="../../index.html">Hjem*</a></li>
         <li><a href="../bank.html">Bank*</a></li>
-        <li><a href="">App</a></li>
+        <li><a href="../app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="../kurs.html">Kurs*</a></li>
         <li><a href="../om_oss.html">Om oss</a></li>
-        </ul>
+      </ul>
     </nav>
     <div id="linje"></div>
     <h3 class="banner_center">Logge inn på nettbank</h3>
-</body>
+    <div class="tutorial_container">
+      <h6>Steg 1.</h6>
+      <p>Trykk på linken under, for å komme deg til login siden til DNB.</p>
+      <a href="https://www.dnb.no/">DNB login.</a>
+      <h6>Steg 2.</h6>
+      <li>
+        <img src="../../data/login_dnb_privat.png" alt="" />
+        <p>
+          Sørg først for at du er på dnb privat ved å trykke der det står
+          privat. I rød boks på bildet.
+        </p>
+      </li>
+      <li>
+        <img src="../../data/login_dnb_login.png" alt="" />
+        <p>Så trykker du på logg inn oppe i høyere hjørne.</p>
+      </li>
+      <h6>Steg 3.</h6>
+      <li>
+        <img src="../../data/login_dnb_nr.png" alt="" />
+        <p>
+          Derretter må du skrive inn fødselsnummeret ditt, også trykke logg inn
+          igjen.
+        </p>
+      </li>
+      <h6>Steg 4.</h6>
+      <li>
+        <img src="../../data/login_dnbvelg.png" alt="" />
+        <p>Til sist velg en innloggings metode.</p>
+      </li>
+      <h6>Steg 5.</h6>
+      <p>
+        Siste steget her er å velge en innloggingsmetode, trykk på en av linkene
+        disse bildene for å få en overgang av hvordan de funker.
+      </p>
+    </div>
+
+    <li id="login">
+      <a href=""
+        ><img src="../../data/login_bankid.PNG" alt="" />
+        <p>Bank id</p></a
+      >
+      <a href=""
+        ><img src="../../data/login_engangskode.PNG" alt="" />
+        <p>Engangskode mobil</p></a
+      >
+      <a href=""
+        ><img src="../../data/login_kodebrikke.PNG" alt="" />
+        <p>Kodebrikke</p></a
+      >
+    </li>
+  </body>
 </html>
