--- a/pages/vipps.html
+++ b/pages/vipps.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="../index.html">Hjem*</a></li>
         <li><a href="bank.html">Bank*</a></li>
-        <li><a href="">App</a></li>
+        <li><a href="app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="kurs.html">Kurs*</a></li>
         <li><a href="">TV</a></li>
@@ -20,5 +20,75 @@
     </nav>
     <div id="linje"></div>
     <h1>Vipps hjelp</h1>
+    <div class="tutorial_container">
+      <h6>Registrere bruker hos vipps:</h6>
+
+      <h6>Steg 1.</h6>
+      <li>
+        <img src="../data/vipps1.jpg" alt="" />
+        <p> Først åpne app store, dette kan gjøres ved å dra nedover på skjermen for så å søke opp app store.</p>
+      </li>
+      <h6>Steg 2.</h6>
+      <li>
+        <img src="../data/vipps2.jpg" alt="" />
+        <p>
+          Så trykke på søk nederst til venstre i hjørnet.
+        </p>
+      </li>
+
+      <h6>Steg 3.</h6>
+      <li>
+        <img src="../data/vipps3.jpg" alt="" />
+        <p>
+          Søk på vipps og trykk på nedlast, om du har lastet ned appen før er det et skysymbol isteden, trykk på den.
+        </p>
+      </li>
+
+      <h6>Steg 4.</h6>
+      <li>
+        <img src="../data/vipps4.jpg" alt="" />
+        <p>
+          Åpne appen og logg inn om du har bruker, hvis ikke trykk registrer deg for å lage en bruker.
+        </p>
+      </li>
+
+      <h6>Steg 5.</h6>
+      <li>
+        <img src="../data/vipps5.jpg" alt="" />
+        <p>
+          Skriv inn navnet ditt så trykk neste.
+        </p>
+      </li>
+
+      <h6>Steg 6.</h6>
+      <li>
+        <img src="../data/vipps6.jpg" alt="" />
+        <p>
+          Skriv inn fødselsnummer også logg inn med bank id.
+        </p>
+      </li>
+
+      <h6>Videre</h6>
+      <p>Om du trenger hjelp til bank id, trykk på delen du trenger hjelp med under.</p>
+    </div>
+
+
+    <li id="login">
+      <a href=""
+        ><img src="../data/login_bankid.PNG" alt="" />
+        <p>Bank id</p></a
+      >
+      <a href=""
+        ><img src="../data/login_engangskode.PNG" alt="" />
+        <p>Engangskode mobil</p></a
+      >
+      <a href=""
+        ><img src="../data/login_kodebrikke.PNG" alt="" />
+        <p>Kodebrikke</p></a
+      >
+    </li>
+    
+    </li>
+    <footer></footer>
   </body>
 </html>
