--- a/pages/apper/vipps.html
+++ b/pages/apper/vipps.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vippshjelp</title>
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html">Hjem*</a></li>
-        <li><a href="bank.html">Bank*</a></li>
-        <li><a href="app.html">App</a></li>
+        <li><a href="../../index.html">Hjem</a></li>
+        <li><a href="../bank.html">Bank</a></li>
+        <li><a href="../app.html">App</a></li>
         <li><a href="">Internett</a></li>
-        <li><a href="kurs.html">Kurs*</a></li>
-        <li><a href="">TV</a></li>
+        <li><a href="../om_oss.html">Om oss</a></li>
       </ul>
     </nav>
     <div id="linje"></div>
@@ -25,12 +24,12 @@
 
       <h6>Steg 1.</h6>
       <li>
-        <img src="../data/vipps1.jpg" alt="" />
+        <img src="../../data/vipps1.jpg" alt="" />
         <p> Først åpne app store, dette kan gjøres ved å dra nedover på skjermen for så å søke opp app store.</p>
       </li>
       <h6>Steg 2.</h6>
       <li>
-        <img src="../data/vipps2.jpg" alt="" />
+        <img src="../../data/vipps2.jpg" alt="" />
         <p>
           Så trykke på søk nederst til venstre i hjørnet.
         </p>
@@ -38,7 +37,7 @@
 
       <h6>Steg 3.</h6>
       <li>
-        <img src="../data/vipps3.jpg" alt="" />
+        <img src="../../data/vipps3.jpg" alt="" />
         <p>
           Søk på vipps og trykk på nedlast, om du har lastet ned appen før er det et skysymbol isteden, trykk på den.
         </p>
@@ -46,7 +45,7 @@
 
       <h6>Steg 4.</h6>
       <li>
-        <img src="../data/vipps4.jpg" alt="" />
+        <img src="../../data/vipps4.jpg" alt="" />
         <p>
           Åpne appen og logg inn om du har bruker, hvis ikke trykk registrer deg for å lage en bruker.
         </p>
@@ -54,7 +53,7 @@
 
       <h6>Steg 5.</h6>
       <li>
-        <img src="../data/vipps5.jpg" alt="" />
+        <img src="../../data/vipps5.jpg" alt="" />
         <p>
           Skriv inn navnet ditt så trykk neste.
         </p>
@@ -62,7 +61,7 @@
 
       <h6>Steg 6.</h6>
       <li>
-        <img src="../data/vipps6.jpg" alt="" />
+        <img src="../../data/vipps6.jpg" alt="" />
         <p>
           Skriv inn fødselsnummer også logg inn med bank id.
         </p>
@@ -75,20 +74,34 @@
 
     <li id="login">
       <a href=""
-        ><img src="../data/login_bankid.PNG" alt="" />
+        ><img src="../../data/login_bankid.PNG" alt="" />
         <p>Bank id</p></a
       >
       <a href=""
-        ><img src="../data/login_engangskode.PNG" alt="" />
+        ><img src="../../data/login_engangskode.PNG" alt="" />
         <p>Engangskode mobil</p></a
       >
       <a href=""
-        ><img src="../data/login_kodebrikke.PNG" alt="" />
+        ><img src="../../data/login_kodebrikke.PNG" alt="" />
         <p>Kodebrikke</p></a
       >
     </li>
     
-    </li>
-    <footer></footer>
+      <footer>
+        <address>
+          Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+          Ingvild Kraggerud<br>
+          Einar Roll Paulsen<br>
+          Markus Lunde<br>
+          Klodina Ledrick<br>
+        </address>
+        <div id="footnav">
+          <li><a href="../index.html">Hjem</a></li>
+        <li><a href="bank.html">Bank</a></li>
+        <li><a href="app.html">App</a></li>
+        <li><a href="">Internett</a></li>
+        <li><a href="">TV</a></li>
+        </div>
+      </footer>
   </body>
 </html>
