--- a/pages/bank.html
+++ b/pages/bank.html
@@ -10,11 +10,10 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html">Hjem*</a></li>
-        <li><a href="bank.html">Bank*</a></li>
+        <li><a href="../index.html">Hjem</a></li>
+        <li><a href="bank.html">Bank</a></li>
         <li><a href="app.html">App</a></li>
         <li><a href="">Internett</a></li>
-        <li><a href="kurs.html">Kurs*</a></li>
         <li><a href="om_oss.html">Om oss</a></li>
       </ul>
     </nav>
@@ -27,7 +26,7 @@
       <li><a href="">Jeg vil ta ut penger fra banken</a></li>
       <li>
         <a href="pin_kode.html"
-          >Jeg husker ikke pin-koden til bankkortet mitt*</a
+          >Jeg husker ikke pin-koden til bankkortet mitt</a
         >
       </li>
       <li><a href="">Jeg vil se saldo på kontoen min</a></li>
@@ -36,6 +35,21 @@
       <li><a href="">Jeg må lage meg bankId</a></li>
       <li><a href="">Jeg forstår ikke mobilbanken</a></li>
     </div>
-    <footer></footer>
+    <footer>
+      <address>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Ingvild Kraggerud<br>
+        Einar Roll Paulsen<br>
+        Markus Lunde<br>
+        Klodina Ledrick<br>
+      </address>
+      <div id="footnav">
+        <li><a href="../index.html">Hjem</a></li>
+      <li><a href="bank.html">Bank</a></li>
+      <li><a href="app.html">App</a></li>
+      <li><a href="">Internett</a></li>
+      <li><a href="">TV</a></li>
+      </div>
+    </footer>
   </body>
 </html>
