--- a/pages/om_oss.html
+++ b/pages/om_oss.html
@@ -10,36 +10,42 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html">Hjem*</a></li>
-        <li><a href="bank.html">Bank*</a></li>
+        <li><a href="../index.html">Hjem</a></li>
+        <li><a href="bank.html">Bank</a></li>
         <li><a href="app.html">App</a></li>
         <li><a href="">Internett</a></li>
-        <li><a href="kurs.html">Kurs*</a></li>
         <li><a href="om_oss.html">Om oss</a></li>
       </ul>
     </nav>
     <div id="linje"></div>
     <h3 class="banner" id="hvem">Hvem er vi?</h3>
     <p class="textbox">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
-      voluptates obcaecati rem, modi vitae esse odit ad nesciunt illum quo id
-      excepturi molestiae quasi natus, incidunt laborum numquam eius maiores!
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quis
-      quas laudantium rerum saepe mollitia amet doloribus, animi minus sequi
-      iste esse molestias sit consequuntur vitae beatae debitis! Mollitia,
-      quisquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-      Nesciunt saepe nostrum vel! Nisi architecto cupiditate omnis in obcaecati,
-      quae impedit suscipit tempore dignissimos numquam enim debitis deleniti
-      voluptatibus similique! Sed! Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Velit fugit facere rem quo ipsa consequuntur porro
-      maiores quis dolores repellat quibusdam mollitia debitis, laboriosam
-      dolorum obcaecati hic possimus sequi soluta. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Facilis aspernatur doloribus, obcaecati
-      vitae neque dolorem! Mollitia ut aspernatur in nobis saepe distinctio
-      aperiam? Numquam odio provident vel sint beatae nam. Lorem ipsum, dolor
-      sit amet consectetur adipisicing elit. Ipsam optio earum est totam soluta
-      nisi asperiores consequatur vel ad id fugit, dignissimos eos
-      exercitationem minima at et quam pariatur excepturi.
+      Vi er en gruppe på 5 studenter fra NTNU i gjøvik. Vi er sammensatt av fire forskjellige studier. Interaksjonsdesign, grafisk design, teknologidesign og webutvikling.
+      Gruppemedlemmene våre er:
     </p>
+      <li class="textbox" id="namelist">Einar, Teknologidesign</li>
+      <li class="textbox" id="namelist">Ingvild, Interaksjonsdesign</li>
+      <li class="textbox" id="namelist">Markus, Interaksjonsdesign</li>
+      <li class="textbox" id="namelist">Klodina, Grafisk design</li>
+      <li class="textbox" id="namelist">Simen, Webutvikling</li>
+      <p class="textbox" id="namelist">Vi har laget denne nettsiden i faget design i helsetjenester, for å forhåpentligvis
+        hjelpe til med digital utenforskap for eldre.</p>
+    
+    <footer>
+      <address>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Ingvild Kraggerud<br>
+        Einar Roll Paulsen<br>
+        Markus Lunde<br>
+        Klodina Ledrick<br>
+      </address>
+      <div id="footnav">
+        <li><a href="../index.html">Hjem</a></li>
+      <li><a href="bank.html">Bank</a></li>
+      <li><a href="app.html">App</a></li>
+      <li><a href="">Internett</a></li>
+      <li><a href="">TV</a></li>
+      </div>
+    </footer>
   </body>
 </html>
