--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <body>
     <nav>
       <ul>
-        <li><a href="index.html">Hjem*</a></li>
-        <li><a href="pages/bank.html">Bank*</a></li>
+        <li><a href="index.html">Hjem</a></li>
+        <li><a href="pages/bank.html">Bank</a></li>
         <li><a href="pages/app.html">App</a></li>
         <li><a href="">Internett</a></li>
-        <li><a href="pages/kurs.html">Kurs*</a></li>
         <li><a href="pages/om_oss.html">Om oss</a></li>
       </ul>
     </nav>
@@ -55,6 +54,21 @@
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1947.0948114104137!2d10.672821816505415!3d60.78974380011602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4641db7a7c610437%3A0x5783e79eaec830ba!2sNTNU%20Institutt%20for%20design%2C%20Gj%C3%B8vik!5e0!3m2!1sen!2sno!4v1637502797850!5m2!1sen!2sno"
     ></iframe>
 
-    <footer></footer>
+    <footer>
+      <address>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Ingvild Kraggerud<br>
+        Einar Roll Paulsen<br>
+        Markus Lunde<br>
+        Klodina Ledrick<br>
+      </address>
+      <div id="footnav">
+        <li><a href="index.html">Hjem</a></li>
+        <li><a href="pages/bank.html">Bank</a></li>
+        <li><a href="pages/app.html">App</a></li>
+        <li><a href="">Internett</a></li>
+        <li><a href="pages/om_oss.html">Om oss</a></li>
+      </div>
+    </footer>
   </body>
 </html>
