--- a/pages/app.html
+++ b/pages/app.html
@@ -10,11 +10,10 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html">Hjem*</a></li>
-        <li><a href="bank.html">Bank*</a></li>
+        <li><a href="../index.html">Hjem</a></li>
+        <li><a href="bank.html">Bank</a></li>
         <li><a href="app.html">App</a></li>
         <li><a href="">Internett</a></li>
-        <li><a href="kurs.html">Kurs*</a></li>
         <li><a href="om_oss.html">Om oss</a></li>
       </ul>
     </nav>
@@ -23,11 +22,26 @@
     <h4>Hvilken app vil du se på?</h4>
 
     <div id="bildevalg">
-      <a href="vipps.html"><img src="../data/vipps.png" alt="" /></a>
+      <a href="apper/easypark.html"><img src="../data/vipps.png" alt="" /></a>
       <a href=""><img src="../data/spotify.png" alt="" /></a>
       <a href=""><img src="../data/digipost.jpg" alt="" /></a>
-      <a href=""><img src="../data/easypark.jpg" alt="" /></a>
+      <a href="apper/easypark.html"><img src="../data/easypark.jpg" alt="" /></a>
     </div>
-    <footer></footer>
+    <footer>
+      <address>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Ingvild Kraggerud<br>
+        Einar Roll Paulsen<br>
+        Markus Lunde<br>
+        Klodina Ledrick<br>
+      </address>
+      <div id="footnav">
+        <li><a href="../index.html">Hjem</a></li>
+      <li><a href="bank.html">Bank</a></li>
+      <li><a href="app.html">App</a></li>
+      <li><a href="">Internett</a></li>
+      <li><a href="">TV</a></li>
+      </div>
+    </footer>
   </body>
 </html>
