--- a/pages/login/logindnb.html
+++ b/pages/login/logindnb.html
@@ -10,11 +10,10 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../../index.html">Hjem*</a></li>
-        <li><a href="../bank.html">Bank*</a></li>
+        <li><a href="../../index.html">Hjem</a></li>
+        <li><a href="../bank.html">Bank</a></li>
         <li><a href="../app.html">App</a></li>
         <li><a href="">Internett</a></li>
-        <li><a href="../kurs.html">Kurs*</a></li>
         <li><a href="../om_oss.html">Om oss</a></li>
       </ul>
     </nav>
@@ -70,5 +69,21 @@
         <p>Kodebrikke</p></a
       >
     </li>
+    <footer>
+        <address>
+          Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+          Ingvild Kraggerud<br>
+          Einar Roll Paulsen<br>
+          Markus Lunde<br>
+          Klodina Ledrick<br>
+        </address>
+        <div id="footnav">
+            <li><a href="../../index.html">Hjem</a></li>
+            <li><a href="../bank.html">Bank</a></li>
+            <li><a href="../app.html">App</a></li>
+            <li><a href="">Internett</a></li>
+            <li><a href="../om_oss.html">Om oss</a></li>
+        </div>
+      </footer>
   </body>
 </html>
