--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <th>Når</th>
       </tr>
       <tr>
-        <td>GJøvik rådhus</td>
+        <td>Gjøvik rådhus</td>
         <td>Kurs om banktjenester</td>
         <td>Hver tirsdag fra kl 13.30 - 15.00</td>
       </tr>
@@ -56,11 +56,14 @@
 
     <footer>
       <address>
-        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
-        Ingvild Kraggerud<br>
-        Einar Roll Paulsen<br>
-        Markus Lunde<br>
-        Klodina Ledrick<br>
+        Laget av gruppe 18 som en oppgave i faget
+        <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet"
+          >design i helsetjenester</a
+        >. <br />
+        Ingvild Kraggerud<br />
+        Einar Roll Paulsen<br />
+        Markus Lunde<br />
+        Klodina Ledrick<br />
       </address>
       <div id="footnav">
         <li><a href="index.html">Hjem</a></li>
