--- a/pages/apper/vipps.html
+++ b/pages/apper/vipps.html
@@ -25,21 +25,23 @@
       <h6>Steg 1.</h6>
       <li>
         <img src="../../data/vipps1.jpg" alt="" />
-        <p> Først åpne app store, dette kan gjøres ved å dra nedover på skjermen for så å søke opp app store.</p>
+        <p>
+          Først åpne app store, dette kan gjøres ved å dra nedover på skjermen
+          for så å søke opp app store.
+        </p>
       </li>
       <h6>Steg 2.</h6>
       <li>
         <img src="../../data/vipps2.jpg" alt="" />
-        <p>
-          Så trykke på søk nederst til venstre i hjørnet.
-        </p>
+        <p>Så trykke på søk nederst til venstre i hjørnet.</p>
       </li>
 
       <h6>Steg 3.</h6>
       <li>
         <img src="../../data/vipps3.jpg" alt="" />
         <p>
-          Søk på vipps og trykk på nedlast, om du har lastet ned appen før er det et skysymbol isteden, trykk på den.
+          Søk på vipps og trykk på nedlast, om du har lastet ned appen før er
+          det et skysymbol isteden, trykk på den.
         </p>
       </li>
 
@@ -47,30 +49,29 @@
       <li>
         <img src="../../data/vipps4.jpg" alt="" />
         <p>
-          Åpne appen og logg inn om du har bruker, hvis ikke trykk registrer deg for å lage en bruker.
+          Åpne appen og logg inn om du har bruker, hvis ikke trykk registrer deg
+          for å lage en bruker.
         </p>
       </li>
 
       <h6>Steg 5.</h6>
       <li>
         <img src="../../data/vipps5.jpg" alt="" />
-        <p>
-          Skriv inn navnet ditt så trykk neste.
-        </p>
+        <p>Skriv inn navnet ditt så trykk neste.</p>
       </li>
 
       <h6>Steg 6.</h6>
       <li>
         <img src="../../data/vipps6.jpg" alt="" />
-        <p>
-          Skriv inn fødselsnummer også logg inn med bank id.
-        </p>
+        <p>Skriv inn fødselsnummer også logg inn med bank id.</p>
       </li>
 
       <h6>Videre</h6>
-      <p>Om du trenger hjelp til bank id, trykk på delen du trenger hjelp med under.</p>
+      <p>
+        Om du trenger hjelp til bank id, trykk på delen du trenger hjelp med
+        under.
+      </p>
     </div>
-
 
     <li id="login">
       <a href=""
@@ -86,22 +87,25 @@
         <p>Kodebrikke</p></a
       >
     </li>
-    
-      <footer>
-        <address>
-          Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
-          Ingvild Kraggerud<br>
-          Einar Roll Paulsen<br>
-          Markus Lunde<br>
-          Klodina Ledrick<br>
-        </address>
-        <div id="footnav">
-          <li><a href="../index.html">Hjem</a></li>
-        <li><a href="bank.html">Bank</a></li>
-        <li><a href="app.html">App</a></li>
+
+    <footer>
+      <address>
+        Laget av gruppe 18 som en oppgave i faget
+        <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet"
+          >design i helsetjenester</a
+        >. <br />
+        Ingvild Kraggerud<br />
+        Einar Roll Paulsen<br />
+        Markus Lunde<br />
+        Klodina Ledrick<br />
+      </address>
+      <div id="footnav">
+        <li><a href="../../index.html">Hjem</a></li>
+        <li><a href="../bank.html">Bank</a></li>
+        <li><a href="../app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="">TV</a></li>
-        </div>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
