--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
       <address>
         Laget av gruppe 18 som en oppgave i faget
         <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet"
-          >design i helsetjenester</a
+        target="_blank">design i helsetjenester</a
         >. <br />
         Ingvild Kraggerud<br />
         Einar Roll Paulsen<br />
         Markus Lunde<br />
         Klodina Ledrick<br />
+        Simen Frogner Hellesnes
       </address>
       <div id="footnav">
         <li><a href="index.html">Hjem</a></li>
