--- a/pages/app.html
+++ b/pages/app.html
@@ -18,8 +18,7 @@
       </ul>
     </nav>
     <div id="linje"></div>
-    <h3 class="banner_center">App</h3>
-    <h4>Hvilken app vil du se på?</h4>
+    <h1>App</h1>
 
     <div id="bildevalg">
       <a href="apper/easypark.html"><img src="../data/vipps.png" alt="" /></a>
@@ -29,11 +28,12 @@
     </div>
     <footer>
       <address>
-        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet" target="_blank">design i helsetjenester</a>. <br>
         Ingvild Kraggerud<br>
         Einar Roll Paulsen<br>
         Markus Lunde<br>
         Klodina Ledrick<br>
+        Simen Frogner Hellesnes
       </address>
       <div id="footnav">
         <li><a href="../index.html">Hjem</a></li>
