--- a/pages/bank.html
+++ b/pages/bank.html
@@ -18,30 +18,30 @@
       </ul>
     </nav>
     <div id="linje"></div>
-    <h3 class="banner_center">Bank</h3>
-    <h4>Hva trenger du hjelp til?</h4>
+    <h1>Bank</h1>
 
     <div class="queries">
-      <li><a href="loggeinn.html">Logge inn på nettbanken</a></li>
-      <li><a href="">Jeg vil ta ut penger fra banken</a></li>
+      <li><a href="loggeinn.html" class="spsm">Logge inn på nettbanken</a></li>
+      <li><a href="" class="spsm">Jeg vil ta ut penger fra banken</a></li>
       <li>
         <a href="pin_kode.html"
-          >Jeg husker ikke pin-koden til bankkortet mitt</a
+        class="spsm">Jeg husker ikke pin-koden til bankkortet mitt</a
         >
       </li>
-      <li><a href="">Jeg vil se saldo på kontoen min</a></li>
-      <li><a href="">Jeg finner ikke kodebrikken min</a></li>
-      <li><a href="">Jeg må overføre penger</a></li>
-      <li><a href="">Jeg må lage meg bankId</a></li>
-      <li><a href="">Jeg forstår ikke mobilbanken</a></li>
+      <li><a href="" class="spsm">Jeg vil se saldo på kontoen min</a></li>
+      <li><a href="" class="spsm">Jeg finner ikke kodebrikken min</a></li>
+      <li><a href="" class="spsm">Jeg må overføre penger</a></li>
+      <li><a href="" class="spsm">Jeg må lage meg bankId</a></li>
+      <li><a href="" class="spsm">Jeg forstår ikke mobilbanken</a></li>
     </div>
     <footer>
       <address>
-        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet" target="_blank">design i helsetjenester</a>. <br>
         Ingvild Kraggerud<br>
         Einar Roll Paulsen<br>
         Markus Lunde<br>
         Klodina Ledrick<br>
+        Simen Frogner Hellesnes
       </address>
       <div id="footnav">
         <li><a href="../index.html">Hjem</a></li>
