--- a/pages/loggeinn.html
+++ b/pages/loggeinn.html
@@ -35,11 +35,12 @@
     </div>
     <footer>
       <address>
-        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet" target="_blank">design i helsetjenester</a>. <br>
         Ingvild Kraggerud<br>
         Einar Roll Paulsen<br>
         Markus Lunde<br>
         Klodina Ledrick<br>
+        Simen Frogner Hellesnes
       </address>
       <div id="footnav">
         <li><a href="../index.html">Hjem</a></li>
