--- a/pages/login/logindnb.html
+++ b/pages/login/logindnb.html
@@ -1,89 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dnb login</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../../styles/style.css" />
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="../../index.html">Hjem</a></li>
-        <li><a href="../bank.html">Bank</a></li>
+    
+</head>
+<body>
+  <script src="../../scipt.js"></script>
+  <nav>
+    <ul>
+      <li><a href="../../index.html">Hjem</a></li>
+      <li><a href="../bank.html">Bank</a></li>
+      <li><a href="../app.html">App</a></li>
+      <li><a href="">Internett</a></li>
+      <li><a href="../om_oss.html">Om oss</a></li>
+    </ul>
+  </nav>
+  <div id="linje"></div>
+  <h1>Hvordan logge inn</h1>
+  
+  <div class="tutorial_container">
+    <p>Trykk på linken under, for å komme deg til login siden til DNB.</p>
+      <a class="button" href="https://www.dnb.no/" target="blank">DNB login.</a>
+  </div>
+
+    <!-- Container for the image gallery -->
+<div class="container">
+
+    <!-- Full-width images with number text -->
+    <div class="mySlides" style="display: block;">
+      <div class="numbertext">1 / 4</div>
+        <img src="../../data/login_dnb_login.png" style="width:100%">
+    </div>
+  
+    <div class="mySlides">
+      <div class="numbertext">2 / 4</div>
+        <img src="../../data/login_dnb_nr.png" style="width:100%">
+    </div>
+  
+    <div class="mySlides">
+      <div class="numbertext">3 / 4</div>
+        <img src="../../data/login_dnb_privat.png" style="width:100%">
+    </div>
+  
+    <div class="mySlides">
+      <div class="numbertext">4 / 4</div>
+        <img src="../../data/login_dnbvelg.png" style="width:100%">
+    </div>
+  
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+    <!-- Image text -->
+    <div class="caption-container">
+      <p id="caption">Sørg først for at du er på dnb privat ved å trykke der det står privat. I rød boks på bildet.</p>
+    </div>
+  
+    <!-- Thumbnail images -->
+    <div class="row">
+      <div class="column">
+        <img class="demo cursor active" src="../../data/login_dnb_login.png" style="width:100%" onclick="currentSlide(1)" alt="Sørg først for at du er på dnb privat ved å trykke der det står privat. I rød boks på bildet.">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="../../data/login_dnb_nr.png" style="width:100%" onclick="currentSlide(2)" alt="Så trykker du på logg inn oppe i høyere hjørne">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="../../data/login_dnb_privat.png" style="width:100%" onclick="currentSlide(3)" alt="Deretter må du skrive inn fødselsnummeret ditt, også trykke logg inn igjen.">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="../../data/login_dnbvelg.png" style="width:100%" onclick="currentSlide(4)" alt="Til sist velg en innloggingsmetode.">
+      </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <address>
+      Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet" target="_blank">design i helsetjenester</a>. <br>
+      Ingvild Kraggerud<br>
+      Einar Roll Paulsen<br>
+      Markus Lunde<br>
+      Klodina Ledrick<br>
+      Simen Frogner Hellesnes
+    </address>
+    <div id="footnav">
+        <li><a href="../../index.html">Hjem*</a></li>
+        <li><a href="../bank.html">Bank*</a></li>
         <li><a href="../app.html">App</a></li>
         <li><a href="">Internett</a></li>
         <li><a href="../om_oss.html">Om oss</a></li>
-      </ul>
-    </nav>
-    <div id="linje"></div>
-    <h3 class="banner_center">Logge inn på nettbank</h3>
-    <div class="tutorial_container">
-      <h6>Steg 1.</h6>
-      <p>Trykk på linken under, for å komme deg til login siden til DNB.</p>
-      <a href="https://www.dnb.no/">DNB login.</a>
-      <h6>Steg 2.</h6>
-      <li>
-        <img src="../../data/login_dnb_privat.png" alt="" />
-        <p>
-          Sørg først for at du er på dnb privat ved å trykke der det står
-          privat. I rød boks på bildet.
-        </p>
-      </li>
-      <li>
-        <img src="../../data/login_dnb_login.png" alt="" />
-        <p>Så trykker du på logg inn oppe i høyere hjørne.</p>
-      </li>
-      <h6>Steg 3.</h6>
-      <li>
-        <img src="../../data/login_dnb_nr.png" alt="" />
-        <p>
-          Derretter må du skrive inn fødselsnummeret ditt, også trykke logg inn
-          igjen.
-        </p>
-      </li>
-      <h6>Steg 4.</h6>
-      <li>
-        <img src="../../data/login_dnbvelg.png" alt="" />
-        <p>Til sist velg en innloggings metode.</p>
-      </li>
-      <h6>Steg 5.</h6>
-      <p>
-        Siste steget her er å velge en innloggingsmetode, trykk på en av linkene
-        disse bildene for å få en overgang av hvordan de funker.
-      </p>
     </div>
+  </footer>
+</body>
 
-    <li id="login">
-      <a href=""
-        ><img src="../../data/login_bankid.PNG" alt="" />
-        <p>Bank id</p></a
-      >
-      <a href=""
-        ><img src="../../data/login_engangskode.PNG" alt="" />
-        <p>Engangskode mobil</p></a
-      >
-      <a href=""
-        ><img src="../../data/login_kodebrikke.PNG" alt="" />
-        <p>Kodebrikke</p></a
-      >
-    </li>
-    <footer>
-        <address>
-          Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
-          Ingvild Kraggerud<br>
-          Einar Roll Paulsen<br>
-          Markus Lunde<br>
-          Klodina Ledrick<br>
-        </address>
-        <div id="footnav">
-            <li><a href="../../index.html">Hjem</a></li>
-            <li><a href="../bank.html">Bank</a></li>
-            <li><a href="../app.html">App</a></li>
-            <li><a href="">Internett</a></li>
-            <li><a href="../om_oss.html">Om oss</a></li>
-        </div>
-      </footer>
-  </body>
 </html>
