--- a/pages/login/loginsparebank.html
+++ b/pages/login/loginsparebank.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
     <div id="linje"></div>
-    <h3 class="banner_center">Logge inn på nettbank</h3>
+    <h1>Logge inn på nettbank</h1>
     <div class="tutorial_container">
       <h6>Steg 1.</h6>
       <p>
@@ -68,11 +68,12 @@
     </li>
     <footer>
         <address>
-          Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+          Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet"target="_blank">design i helsetjenester</a>. <br>
           Ingvild Kraggerud<br>
           Einar Roll Paulsen<br>
           Markus Lunde<br>
           Klodina Ledrick<br>
+          Simen Frogner Hellesnes
         </address>
         <div id="footnav">
             <li><a href="../../index.html">Hjem</a></li>
