--- a/pages/om_oss.html
+++ b/pages/om_oss.html
@@ -23,7 +23,7 @@
       Vi er en gruppe på 5 studenter fra NTNU i gjøvik. Vi er sammensatt av fire forskjellige studier. Interaksjonsdesign, grafisk design, teknologidesign og webutvikling.
       Gruppemedlemmene våre er:
     </p>
-      <li class="textbox" id="namelist">Einar, Teknologidesign</li>
+      <li class="textbox" id="namelist">Einar, Teknologidesign og ledelse</li>
       <li class="textbox" id="namelist">Ingvild, Interaksjonsdesign</li>
       <li class="textbox" id="namelist">Markus, Interaksjonsdesign</li>
       <li class="textbox" id="namelist">Klodina, Grafisk design</li>
@@ -33,7 +33,7 @@
     
     <footer>
       <address>
-        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet">design i helsetjenester</a>. <br>
+        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet" target="_blank">design i helsetjenester</a>. <br>
         Ingvild Kraggerud<br>
         Einar Roll Paulsen<br>
         Markus Lunde<br>
