--- a/pages/app.html
+++ b/pages/app.html
@@ -21,26 +21,33 @@
     <h1>App</h1>
 
     <div id="bildevalg">
-      <a href="apper/easypark.html"><img src="../data/vipps.png" alt="" /></a>
+      <a href="apper/vipps.html"><img src="../data/vipps.png" alt="" /></a>
       <a href=""><img src="../data/spotify.png" alt="" /></a>
       <a href=""><img src="../data/digipost.jpg" alt="" /></a>
-      <a href="apper/easypark.html"><img src="../data/easypark.jpg" alt="" /></a>
+      <a href="apper/easypark.html"
+        ><img src="../data/easypark.jpg" alt=""
+      /></a>
     </div>
     <footer>
       <address>
-        Laget av gruppe 18 som en oppgave i faget <a href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet" target="_blank">design i helsetjenester</a>. <br>
-        Ingvild Kraggerud<br>
-        Einar Roll Paulsen<br>
-        Markus Lunde<br>
-        Klodina Ledrick<br>
+        Laget av gruppe 18 som en oppgave i faget
+        <a
+          href="https://www.ntnu.no/studier/emner/IDG2000#tab=omEmnet"
+          target="_blank"
+          >design i helsetjenester</a
+        >. <br />
+        Ingvild Kraggerud<br />
+        Einar Roll Paulsen<br />
+        Markus Lunde<br />
+        Klodina Ledrick<br />
         Simen Frogner Hellesnes
       </address>
       <div id="footnav">
         <li><a href="../index.html">Hjem</a></li>
-      <li><a href="bank.html">Bank</a></li>
-      <li><a href="app.html">App</a></li>
-      <li><a href="">Internett</a></li>
-      <li><a href="">TV</a></li>
+        <li><a href="bank.html">Bank</a></li>
+        <li><a href="app.html">App</a></li>
+        <li><a href="">Internett</a></li>
+        <li><a href="">TV</a></li>
       </div>
     </footer>
   </body>
