--- a/pages/login/logindansk.html
+++ b/pages/login/logindansk.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-  <script src="../../scipt.js"></script>
+  
   <nav>
     <ul>
       <li><a href="../../index.html">Hjem</a></li>
@@ -32,25 +32,28 @@
 
     <!-- Full-width images with number text -->
     <div class="mySlides" style="display: block;">
-      <div class="numbertext">1 / 4</div>
+      <div class="numbertext">1 / 5</div>
         <img src="../../data/login_dansk_privat.png" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">2 / 4</div>
+      <div class="numbertext">2 / 5</div>
         <img src="../../data/login_danske_login.png" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">3 / 4</div>
+      <div class="numbertext">3 / 5</div>
         <img src="../../data/login_dansk_nettbank.png" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">4 / 4</div>
+      <div class="numbertext">4 / 5</div>
         <img src="../../data/login_dansk_nr.PNG" style="width:100%">
     </div>
-  
+    <div class="mySlides">
+      <div class="numbertext">5 / 5</div>
+        <img src="../../data/Login_valg.PNG" style="width:100%">
+    </div>
   
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -63,17 +66,20 @@
   
     <!-- Thumbnail images -->
     <div class="row">
-      <div class="column">
-        <img class="demo cursor active" src="../../data/login_dansk_privat.png" style="width:100%" onclick="currentSlide(1)" alt="Sørg først for at du er på dnb privat ved å trykke der det står privat. I rød boks på bildet.">
+      <div class="column" id="col">
+        <img class="demo cursor active" src="../../data/login_dansk_privat.png" style="width:100%" onclick="currentSlide(1)" alt="Sørg først for at du er på privat ved å trykke der det står privat. I rød boks på bildet.">
       </div>
-      <div class="column">
+      <div class="column" id="col">
         <img class="demo cursor" src="../../data/login_danske_login.png" style="width:100%" onclick="currentSlide(2)" alt="Så trykker du på logg inn oppe i høyere hjørne">
       </div>
-      <div class="column">
-        <img class="demo cursor" src="../../data/login_dansk_nettbank.png" style="width:100%" onclick="currentSlide(3)" alt="Deretter må du skrive inn fødselsnummeret ditt, også trykke logg inn igjen.">
+      <div class="column" id="col">
+        <img class="demo cursor" src="../../data/login_dansk_nettbank.png" style="width:100%" onclick="currentSlide(3)" alt="Trykk deretter på netbank.">
       </div>
-      <div class="column">
-        <img class="demo cursor" src="../../data/login_dansk_nr.PNG" style="width:100%" onclick="currentSlide(4)" alt="Til sist velg en innloggingsmetode.">
+      <div class="column" id="col">
+        <img class="demo cursor" src="../../data/login_dansk_nr.PNG" style="width:100%" onclick="currentSlide(4)" alt="Så må du skrive inn fødselsnummeret ditt.">
+      </div>
+      <div class="column" id="col">
+        <img class="demo cursor" src="../../data/Login_valg.PNG" style="width:100%" onclick="currentSlide(5)" alt="Til sist velg innloggingsmetode">
       </div>
       </div>
     </div>
@@ -95,6 +101,7 @@
         <li><a href="../om_oss.html">Om oss</a></li>
     </div>
   </footer>
+  <script src="../../scipt.js"></script>
 </body>
 
 </html>
